--- a/LeetCode/100 Same Tree/100 Same Tree.vcxproj
+++ b/LeetCode/100 Same Tree/100 Same Tree.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{53BABA15-BD54-4435-9FDF-3122A3917FE4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My100SameTree</RootNamespace>
+    <ProjectName>0100 Same Tree</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
