--- a/LeetCode/120 Trangle/120 Trangle.vcxproj
+++ b/LeetCode/120 Trangle/120 Trangle.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{686A3D47-655C-43F2-AC5C-3E4FDEFF0176}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My120Trangle</RootNamespace>
+    <ProjectName>0120 Trangle</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
