--- a/LeetCode/122 Best Time to Buy and Sell Stock 2/122 Best Time to Buy and Sell Stock 2.vcxproj
+++ b/LeetCode/122 Best Time to Buy and Sell Stock 2/122 Best Time to Buy and Sell Stock 2.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{B9C2472D-0FE3-4FF1-9166-BABB5402651C}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My122BestTimetoBuyandSellStock2</RootNamespace>
+    <ProjectName>0122 Best Time to Buy and Sell Stock 2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
