--- a/LeetCode/27 Contains Duplicate/27 Contains Duplicate.vcxproj
+++ b/LeetCode/27 Contains Duplicate/27 Contains Duplicate.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{9B6B960E-04E7-47CF-9A5C-BC243E6B22FE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My27ContainsDuplicate</RootNamespace>
+    <ProjectName>0027 Contains Duplicate</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
