--- a/LeetCode/31 Next Permutaion/31 Next Permutaion.vcxproj
+++ b/LeetCode/31 Next Permutaion/31 Next Permutaion.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{3976B91E-DACA-40AF-B98B-4D0FE2DCD0BD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My31NextPermutaion</RootNamespace>
+    <ProjectName>0031 Next Permutaion</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
