--- a/LeetCode/53 Maximum Subadrray/53 Maximum Subadrray.vcxproj
+++ b/LeetCode/53 Maximum Subadrray/53 Maximum Subadrray.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{608F8666-A3C1-433F-819C-579C6E5F7F58}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My53MaximumSubadrray</RootNamespace>
+    <ProjectName>0053 Maximum Subadrray</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
