--- a/LeetCode/64 Minimun Path Sum/64 Minimun Path Sum.vcxproj
+++ b/LeetCode/64 Minimun Path Sum/64 Minimun Path Sum.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{33495BCA-E42C-4FE2-977D-E0FB4913E656}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My64MinimunPathSum</RootNamespace>
+    <ProjectName>0064 Minimun Path Sum</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
